Sun Feb 22 00:20:12 MET 1998  Eckehard Berns  <eb@berns.prima.de>

	* gdk/gdkcc.c (gdk_color_context_query_colors): fixed a bug for mode
	GDK_CC_MODE_TRUE, when on a 24-bit visual on a 32-bit mashine.

Sat Feb 21 15:33:20 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkwidget.h: 
	* gtk/gtkwidget.c: renamed signal GtkWidget::set_parent to
	GtkWidget::parent_set. since it's purpose is pure notification,
	it should have been named this way in the first place.

Sat Feb 21 12:06:11 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* gtk/gtkentry.c (gtk_entry_set_text): Added a test for passing a
	NULL text pointer.

Sat Feb 21 14:49:17 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkobject.h:
	* gtk/gtkobject.c: gtk_object_query_args takes an additional pointer
 	now which if supplied will point to an array holding the sequential
	argument ids.

	* gtk/gtktree.c: fix emission of selection_changed signal, supplied
	by Bolliet Jerome.

	* gtk/gtktreeitem.c: inline the plus and minus pixmaps, supplied by
	Bolliet Jerome.

	* gtk/gtknotebook.c: do a resize when a page is removed and don't
	refer to the removed page on the switch signal, supplied by Lars Hamann
	and Stefan Jeske.

	* gtk/gtktoolbar.h:
	* gtk/gtktoolbar.c:
 	gtk_toolbar_append_item, gtk_toolbar_prepend_item,
 	gtk_toolbar_insert_item, gtk_toolbar_append_widget,
	gtk_toolbar_prepend_widget, gtk_toolbar_insert_widget: take an additional
 	gchar *tooltip_private_text as argument to fully support the underlying
	call to gtk_tooltip_set_tip.

Fri Feb 20 16:44:57 GMT 1998 Tony Gale <gale@gimp.org>

	* docs/gtkfaq.sgml: added to list of GTK apps, added permissions notice
		new GDK section - needs some Q&A's added

Fri Feb 20 06:40:00 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtktipsquery.h: 
	* gtk/gtktipsquery.c:
 	New widget GtkTipsQuery for letting the user query tooltips of widgets.

	* gtk/testgtk.c: add example for GtkTipsQuery.

	* gtk/gtk.h: include gtk/gtktipsquery.h.
